ver 0.21.4 (not yet released)
* database
  - inotify: fix crash bug "terminate called after throwing ..."
  - upnp: implement "list ... group"
* output
  - httpd: declare protocol "HTTP/1.1" instead of "ICY"

ver 0.21.3 (2018/11/16)
* output
  - alsa: fix crash bug
  - alsa: fix stuttering at start of playback
  - alsa: fix discarded samples at end of song
  - alsa: clear error after reopening device
* log: default to journal if MPD was started as systemd service

ver 0.21.2 (2018/11/12)
* protocol
  - operator "=~" matches a regular expression
  - operator "contains" matches substrings
* decoder
  - ffmpeg: require FFmpeg 3.1 or later
  - ffmpeg: fix broken sound with certain codecs
* output
  - alsa: fix high CPU usage with dmix
  - httpd: fix three crash bugs
* mixer
  - alsa: fix more rounding errors
* fix zlib support

ver 0.21.1 (2018/11/04)
* protocol
  - allow escaping quotes in filter expressions
  - operator "==" never searches substrings in filter expressions
* decoder
  - ffmpeg: fix build failure with non-standard FFmpeg installation path
  - flac: fix linker failure when building without FLAC support
* encoder
  - vorbis: fix linker failure when building without Vorbis decoder
* fix build failure on Linux-PowerPC
* fix build failure on FreeBSD
* eliminate DLL dependencies on Windows
* add warning about buggy Boost version 1.67
* require Meson 0.47.2 because a Meson 0.47.1 bug breaks our build

ver 0.21 (2018/10/31)
* configuration
  - add "include" directive, allows including config files
  - incremental "metadata_to_use" setting
* protocol
  - "tagtypes" can be used to hide tags
  - "find" and "search" can sort
  - "outputs" prints the plugin name
  - "outputset" sets runtime attributes
  - close connection when client sends HTTP request
  - new filter syntax for "find"/"search" etc. with negation
* database
  - simple: scan audio formats
  - proxy: require libmpdclient 2.9
  - proxy: forward `sort` and `window` to server
* player