@@ -4,6 +4,7 @@ ver 0.21.4 (not yet released)
   - upnp: implement "list ... group"
 * output
   - httpd: declare protocol "HTTP/1.1" instead of "ICY"
+* remove libwrap support
 
 ver 0.21.3 (2018/11/16)
 * output
